Fix z-index & border radius on selectbox

--- a/src/app/components/dashboard-company-selectbox/dashboard-company-selectbox.less
+++ b/src/app/components/dashboard-company-selectbox/dashboard-company-selectbox.less
@@ -12,8 +12,7 @@ dashboard-company-selectbox {
     border-radius: @dashboard-cpy-select-border-radius;
     border-left: 1px solid @dashboard-cpy-select-border-color;
     border-bottom: 1px solid @dashboard-cpy-select-border-color;
-    z-index: 10;
-    border-bottom-left-radius: 10px;
+    z-index: 999;
 
     // Change company button
     .btn.switch-company {
