--- a/src/app/stylesheets/variables.less
+++ b/src/app/stylesheets/variables.less
@@ -100,7 +100,7 @@
 @dashboard-cpy-select-width:                    280px;
 @dashboard-cpy-select-pic-width:                50px;
 @dashboard-cpy-select-bg-color:                 @bg-inverse-color;
-@dashboard-cpy-select-border-radius:            0;
+@dashboard-cpy-select-border-radius:            0 0 0 6px;
 @dashboard-cpy-select-border-color:             @text-inverse-link-color;
 @dashboard-cpy-select-padding:                  15px 25px;
 
